# QGradient

./: CMakeLists.txt  Main.qml  README.md  main.cpp  uilogic.cpp  uilogic.h
Garno/: Button.qml  CMakeLists.txt  GRectangle.qml  Style.qml
qml/: AddColorMenu.qml  AddMenu.qml  ListPage.qml  Main.qml
src/: UILogic.cpp  UILogic.hpp
ui/: Main.qml
